tests/instantiating/reset_invalid_type/stderr.golden
error: reset property must be of type string, current type float
bus.fbd +2:11
   |
 2 |   reset = 3.14
   |           ^^^^
